--- a/Application/Prototype/SadkoProto/SadkoProto/View Controllers/UIDoctorDetailsViewController.xib
+++ b/Application/Prototype/SadkoProto/SadkoProto/View Controllers/UIDoctorDetailsViewController.xib
@@ -27,7 +27,7 @@
                     <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                     <subviews>
-                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" id="NKZ-h5-XA8">
+                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="avatar.png" id="NKZ-h5-XA8">
                             <rect key="frame" x="20" y="20" width="80" height="80"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         </imageView>
@@ -95,4 +95,7 @@
             <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
         </view>
     </objects>
+    <resources>
+        <image name="avatar.png" width="128" height="128"/>
+    </resources>
 </document>
